# TerrainSim

./: .gitignore  .scanrc.json  CLOUDFLARE_PAGES_SETUP.md  LOAD-TEST-QUICKSTART.md  README.md  TEST-304-SUMMARY.md  TOOL-002-SUMMARY.md  docker-compose.yml  ecosystem.config.cjs  ecosystem.config.js  fetch-comparison-logs.ps1  nginx-terrainsim.conf  package.json  playwright.config.ts  pnpm-lock.yaml  scan-test-report.txt  temp_commit.ps1  test-erosion-behavior.cjs  test-erosion-values.cjs  test-erosion.cjs  test-spike-diagnosis.cjs
.github/workflows/: benchmarks.yml  capture-deployment-logs.yml  ci.yml  deploy-backend.yml  deploy-frontend.yml  deploy.yml  load-test.yml  test-aws-ec2-setup.yml
.husky/: README.md  pre-commit  pre-push
apps/simulation-api/: .env.development  .env.example  .env.production  .gitignore  README.md  ecosystem.config.js  package-lock.json  package.json  test-logging.js  test-server.js  test-winston.js
apps/simulation-api/.logs/: unified-logs.json
apps/simulation-api/config-presets/: 2ccf6f5a-6c59-40fc-a2f5-11825b5e7a68.json  5e8c3915-2333-4f78-b9ac-7328a1781a70.json  8a3bd72e-d78f-48d9-a96f-4cccd5a7d9be.json  ce5429de-7b62-4943-97cc-41dfc543f32e.json  df8c9dbc-fd16-45be-b10b-8b6aacfe56f6.json  fc9b6021-51f5-495c-884b-587027b92729.json  fd6dd39e-06cf-4f97-80d9-05f9d5f694fa.json
apps/web/: .env.example  .env.production  .gitignore  ISSUE_RESOLUTION.md  MANUAL-TEST-GUIDE.txt  SESSION_INTEGRATION.md  package.json  take-screenshot.mjs  test-all.mjs  test-backend-frames.mjs  test-camera-position.mjs  test-frame-cache-content.mjs  test-frame-differences.mjs  test-full-flow.mjs  test-generate-api.mjs  test-generate-frame-switch.mjs  test-generate-response.mjs  test-generate-with-session.mjs  test-network-monitor.mjs  test-next-frame-visual.mjs  test-play-simulation.mjs  test-session-creation.mjs  test-simulation-flow.mjs  test-terrain-bounds.mjs  vite.config.ts
config-presets/: dramatic-erosion.json  gentle-erosion.json  visual-erosion.json
docker/nginx/: nginx.conf
docs/: AWS_DEPLOYMENT_GUIDE.md  AWS_QUICK_REF.md  CPP_EROSION_INTEGRATION_SUMMARY.md  DEBUGGING_TERRAIN_UPDATES.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_QUICK_REF.md  EROSION-FIX-SUMMARY.md  FRONTEND-DEPLOYMENT-GUIDE.md  Iterations Planning  LOGGING-INFRASTRUCTURE-PLAN.md  MONITORING.md  PRODUCTION-DEBUGGING-GUIDE.md  PROJECT_STATUS.md  README.md  System Spec.md  TDD-PLAN-EROSION.md  UPTIMEROBOT_SETUP.md  backend-api-endpoints-implementation.md  deployment-logging-implementation.md  frontend-logging-implementation.md  phase-3.1-testing-guide.md  phase-3.2-production-testing-guide.md  production-logging-setup.md  python-scripts-implementation.md  testing-production-vs-local.md  testing-setup-complete.md  winston-logging-implementation.md
docs/algorithms/: HYDRAULIC_EROSION_MODEL.md
docs/dev/: LOGGING_SYSTEM.md  TESTING_AND_DEBUGGING_IMPROVEMENTS.md  VISUAL_REGRESSION_TESTING.md
docs/doc/: AGENT_DEBUGGING_WORKFLOW.md  API.md  JOB_SYSTEM_API.md
docs/infra/: AWS_DEPLOYMENT_FIX.md  AWS_EC2_CI_TESTING.md  AWS_EC2_SETUP_TEST_RESULTS.md  BACKEND_CICD_SETUP.md  BENCHMARK_BASELINE.md  CLOUDFLARE_ANALYTICS.md  DEPLOYMENT.md  ENVIRONMENT_REPRODUCTION_SUMMARY.md  ENVIRONMENT_VALIDATION.md  LOCAL_ENVIRONMENT_GUIDE.md  PERFORMANCE_METRICS.md  TESTING_GUIDE.md  UPTIMEROBOT_SETUP.md  performance-thresholds.md
docs/plan/: Backlog.md  Iterations Planning  JOB_EXECUTION_MODEL.md  REPO_IMPROVEMENT_PLAN.md  SIMULATION_PIPELINE_REDESIGN.md  System Spec.md
docs/spec/: JOB_SYSTEM_ARCHITECTURE.md  JOB_SYSTEM_USER_GUIDE.md  Job-System.md  System-Spec.md
docs/temp/: .gitkeep  DEPENDENCY_AUDIT_2026-01-16.md
e2e/: erosion-frame-analysis.spec.ts  erosion-progressive.spec.ts  hydraulic-erosion-api.spec.ts  simulation-frame-update.spec.ts  terrain-texture-visual-simple.spec.ts  terrain-texture-visual.spec.ts  terrain-update-debug.spec.ts  terrain.spec.ts  terrain.visual.spec.ts  visual-poc.spec.ts
libs/core/: CMakeLists.txt
libs/core/bindings/node/: CMakeLists-job-system.txt  CMakeLists.txt  README.md  erosion_addon.cpp  index.js  job-system-binding.cpp  job-system.js  package-lock.json  package.json  test.js
libs/core/bindings/node/build-job-system/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  terrain_erosion_native.sln  terrain_erosion_native.vcxproj  terrain_erosion_native.vcxproj.filters
libs/core/include/: ConfigParser.hpp  Heightmap.hpp  HydraulicErosion.hpp  JobExecutor.hpp  JobValidator.hpp  PerlinNoise.hpp  SimulationJob.hpp  Terrain.hpp  TerrainGenerators.hpp  WaterParticle.hpp
libs/core/src/: ConfigParser.cpp  Heightmap.cpp  HydraulicErosion.cpp  JobExecutor.cpp  JobValidator.cpp  PerlinNoise.cpp  TerrainGenerators.cpp  WaterParticle.cpp
libs/core/tests/: ConfigParserTest.cpp  HeightmapGradientTest.cpp  HeightmapTest.cpp  HydraulicErosionTest.cpp  JobExecutorTest.cpp  JobValidatorTest.cpp  PerlinNoiseTest.cpp  TerrainGeneratorsTest.cpp  TerrainTest.cpp  WaterParticleTest.cpp
libs/core/tests/benchmarks/: HeightmapBenchmark.cpp  HydraulicErosionBenchmark.cpp  PerlinNoiseBenchmark.cpp
scripts/: aggregate-logs.sh  audit-dependencies.py  capture-aws-logs.sh  capture-backend-logs.py  capture-cloudflare-deployment-logs.py  capture-cloudflare-logs.sh  capture-frontend-logs.py  capture-gh-logs.sh  clean-backend-logs.py  clean-frontend-logs.py  compare-benchmarks.py  compare-logs.ts  detect-dead-code.py  filter-logs.py  generate-ssl-certs.sh  generate-test-expectations.ts  log-manager.py  pre-deploy-scan.sh  run-ci-locally.ps1  run-ci-locally.py  set-log-level.py  setup-monitoring.sh  setup-production-logging.ps1  test-api-endpoints.ps1  test-helper.ts  test-phase-3.1.ps1  test-production-ssh.py  test-production.ps1  test-production.py  validate-env.ps1  validate-env.sh  verify-terrain-differences.mjs  view-logs.html
tests/load/: README.md  ci-scenario.js  comprehensive-scenario.js  health-check.js  spike-test.js  stress-test.js  terrain-generation.js  websocket-simulation.js
(+75 files in other folders)
